@startuml
entity "Products" {
    + product_id : INT <<PK>>
    + name : VARCHAR
    + category : VARCHAR
    + price : DECIMAL
    + supplier_id : INT <<FK>>
    + stock_quantity : INT
}

entity "Suppliers" {
    + supplier_id : INT <<PK>>
    + name : VARCHAR
    + contact_info : VARCHAR
    + country : VARCHAR
}

entity "Customers" {
    + customer_id : INT <<PK>>
    + name : VARCHAR
    + location : VARCHAR
    + email : VARCHAR
}

entity "Orders" {
    + order_id : INT <<PK>>
    + customer_id : INT <<FK>>
    + order_date : DATE
    + order_status : VARCHAR
}

entity "Order_Items" {
    + order_item_id : INT <<PK>>
    + order_id : INT <<FK>>
    + product_id : INT <<FK>>
    + quantity : INT
    + price_at_purchase : DECIMAL
}

entity "Shipments" {
    + shipment_id : INT <<PK>>
    + order_id : INT <<FK>>
    + shipped_date : DATE
    + delivery_date : DATE
    + shipping_cost : DECIMAL
}

Products }|..|{ Suppliers : supplies
Customers }|..|{ Orders : places
Orders }|..|{ Order_Items : contains
Products }|..|{ Order_Items : includes
Orders }|..|{ Shipments : ships
@enduml